	with three points was reported by Paul Bacquet (Louvain,
	Belgium). 

	* radfit: plotting of radfit frames of several communuties failed
	if there were one-species or no-species (empty) rows. Part of this
	was fitted.radfit that now returns sensible and consistent output
	for these cases as well, and radfit.data.frame() completely
	removes empty rows from the data (with a warning).

	* tabasco: "hclust" objects (use, sp.ind) are reordered using
	weighted means. This is a better method than the unweighted means
	used for reordering of dendrograms. Earlier "hclust" objects were
	changed to dendrograms, but now we provide reorder.hclust() and
	rev.hclust() in vegan, and can use improved method of ordering the
	table. Dendrogram and hclust labels must match the community data
	names, and now the community matrix is internally reordered to
	match the dendrograms. This requires that the clusterings do have
	labels attributes.

	* treedive, treedist: default is now match.force = TRUE, and
	treedive() gained new argument 'verbose' to turn of most messages
	-- which is practical in oecosimu().

	* BCI: names checked after http://www.theplantlist.org, but kept
	the old (alphabetic) order of species. The changes are: Abarema
	macradenium -> A. macradenia, Apeiba aspera -> A. glabra,
	Aspidosperma cruenta -> A. desmanthum, Cassipourea ellipitica ->
	C. guianensis, Chlorophora tinctoria -> Maclura t., Coccoloba
	manzanillensis -> C. manzinellensis, Cupania sylvatica ->
	C. seemannii, Dipteryx panamensis -> D. oleifera, Eugenia
	coloradensis -> E. florida, Eugenia oerstedeana -> E. oerstediana,
	Inga marginata -> I. semialata, Lonchocarpus latifolius ->
	L. heptaphyllus (this is ambiguous, since Hebestichma cubense is
	another alternative), Maquira costaricana -> Maquira guianensis
	var. costaricana, Phoebe cinnamomifolia -> Cinnamomum triplinerve,
	Swartzia simplex var. ochnaceae -> var. continentalis, Tabebuia
	guayacan -> Handroanthus g. Guarea is ambiguous: data have three